--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     *{
         margin-left: 10px;
         margin-right: 10px;
-        background-color: #ffffff;
+        background-color: #ff7a7a;
     }
 
     .logo img{
