--- a/index.html
+++ b/index.html
@@ -10,22 +10,24 @@
     <div class="header">
 
         <div class="logo">
-            <img src="./iiitdmlogo.png" alt="">
+            <a href="#"><img src="./logo.png" alt=""></a>
         </div>
 
         <div class="heading">
             <h1>Inscript<span>GPT</span></h1>
         </div>
         <div class="qrcode">
-            <a href="" class="qr">
+            <a href="#">
                 <img src="./qr.jpeg" alt="">
                 <h3>Click To Scan</h3>
             </a>
         </div>
-        <div class="qrzoom overlay">
-            <img src="./qr.jpeg" alt="">
-        </div>
     </div>
+
+       <div class="qrzoom hidden">
+            <img src="./qr.jpeg" alt="">
+            <p>Press "Q" to Cancel</p>
+        </div>
 
     <div class="filters">
         <ul>
@@ -51,13 +53,12 @@
         margin: 0;
         padding: 0;
     }
-    .hidden{
-        display: none;
-    }
     .overlay{
+        position: fixed;
         background-color: rgba(0, 0,0, 0.5);
-        backdrop-filter: blur(5px);
+        backdrop-filter: blur(10px);
         z-index: 22;
+        inset: 0;
         width: 100vw;
         height: 100vh;
     }
@@ -67,8 +68,12 @@
         padding: 0;
         width: 150px;
         height: 150px;
+        transition-duration: 0.3s;
     }
-
+    .logo img:hover{
+        transform: scale(1.2);
+        transition-duration: 0.3s;
+    }
     .heading{
         position: fixed;
         left: 590px;
@@ -81,11 +86,12 @@
     
     .qrcode{
         position: fixed;
-        left: 1250px;
-        top: 30px;
+        left: 1300px;
+        top: 40px;
+        transition-duration: 0.3s;
     }
     .qrcode img{
-        width: 130px;
+        width: 100px;
     }
     .qrcode a{
         text-decoration: none;
@@ -93,18 +99,41 @@
         padding: 0;
         margin: 0;
         color: black;
+        transition-duration: 0.3s;
     }
     .qrcode h3{
         position: relative;
         left: 8px;
+        font-size: 14px;
+    }
+    .qrcode:hover{
+        transform: scale(1.2);
+        transition-duration: 0.3s;
+
     }
     .qrzoom{
         position: fixed;
-        left: 500px;
-        z-index: 20;
+        inset: 0;
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition-duration: 0.4s;
     }
     .qrzoom img{
-        width: 450px;
+        width: 500px;
+        transition-duration: 0.4s;
+    }
+    .qrzoom p{
+        position: absolute;
+        top: 800px;
+        right: 650px;
+        margin: 0;
+        padding: 0;
+        color: white;
+        font-size: 17px;
+        font-weight: bold;
     }
 
     .filters{
@@ -155,6 +184,10 @@
         padding: 14px;
         font-size: 17px;
     }
+    .main button:hover{
+        background-color: rgb(21, 145, 246);
+        transition-duration: 0.3s;
+    }
     .main .answer{
         border: 1px solid black;
         margin-top: 15px;
@@ -164,11 +197,27 @@
     .main .answer p{
         font-size: 17px;
     }
+
+    .hidden{
+        display: none;
+    }
 </style>
 
 <script>
+
     document.querySelector('.qrcode').addEventListener('click', function(){
-        document.querySelector('.qrzoom').classList.add('overlay');
+        if(document.querySelector('.qrzoom').classList.contains('hidden')){
+            document.querySelector('.qrzoom').classList.remove('hidden');
+            document.querySelector('.qrzoom').classList.add('overlay');
+        }
     });
+
+    document.addEventListener('keydown', function(e){
+        if(!document.querySelector('.qrzoom').classList.contains('hidden') && (e.key == "q" || e.key == "Q")){
+            document.querySelector('.qrzoom').classList.add('hidden');
+            document.querySelector('.qrzoom').classList.remove('overlay');
+        }
+    })
+
 </script>
 </html>
