Added new description about LOGO

--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
         <div class="pageinfo hidden">
             <div class="pageinfointernal">
                 <a href="#"><img src="./logo.png" alt=""></a>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam assumenda, molestiae omnis officia distinctio itaque quos eum exercitationem expedita fuga enim molestias iste veritatis earum laborum neque cupiditate magni illo? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil commodi, accusantium debitis, quibusdam maxime perferendis dicta quis, optio sunt voluptas aspernatur sapiente totam! Sapiente dolorem perspiciatis a accusamus dignissimos ad. Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci quo maxime illo reiciendis id, dolores beatae error deleniti eaque voluptatum molestias accusantium minus consequuntur perspiciatis nulla aliquid repudiandae. Voluptate, dolore!</p>
+                <p>InscriptGPT is an immersive online platform dedicated to the exploration and understanding of inscriptions from various historical periods and cultures. This specialized website offers enthusiasts, students, and scholars a unique opportunity to delve into the world of written artifacts, unlocking the stories and secrets they hold.
 
+                    At the heart of InscriptGPT lies an extensive and diverse inscription database that spans across civilizations, languages, and eras. Whether you're drawn to the enigmatic hieroglyphs of ancient Egypt or the cryptic runes of medieval Europe, our platform provides access to a wealth of inscriptions, each with its own historical significance.
+                    
+                    Our user-friendly search functionality empowers users to effortlessly locate specific inscriptions based on keywords, historical contexts, geographical regions, or cultural backgrounds. This ensures that you can easily find the inscriptions that intrigue you the most.</p>
                 <h5>Press "Q" to Cancel</h5>
             </div>
         </div>
