Issue in hover of logo then retrieval of webpage info  was cleared

--- a/index.html
+++ b/index.html
@@ -73,13 +73,17 @@
         width: 100vw;
         height: 100vh;
     }
-
-    .logo img{
+    
+    .logo{
         margin: 30px;
         padding: 0;
         width: 150px;
         height: 150px;
         transition-duration: 0.3s;
+    }
+
+    .logo img{
+        width: 150px;
     }
     .logo img:hover{
         transform: scale(1.2);
