--- a/index.html
+++ b/index.html
@@ -57,6 +57,17 @@
             <p>Here is your answer....</p>
         </div>
     </div>
+
+    <div class="questiontag">
+        <button type="button">Questions Asked</button>
+    </div>
+
+    <div class="questionbar hidden">
+        <div class="head"><h2>Questions Asked</h2></div>
+
+
+        <p>Press "Q" to Cancel</p>
+    </div>
 </body>
 
 <style>
@@ -248,6 +259,52 @@
         font-size: 18px;
     }
 
+    .questiontag{
+        position: relative;
+        top: 200px;
+    }
+    .questiontag button{
+        padding: 10px;
+        background-color: rgb(21, 145, 246);
+        border: none;
+        border-radius: 2px;
+        color: white;
+        transition-duration: 0.3s;
+        font-weight: bold;
+    }
+    .questiontag button:hover{
+        padding-right: 15px;
+        font-size: 16px;
+        transition-duration: 0.3s;
+        font-weight: bold;
+    }
+
+    .questionbar{
+        height: 100vh;
+        width: 30%;
+        background-color: rgba(21, 145, 246, 0.8);
+        z-index: 40;
+        position: absolute;
+        top: 0;
+    }
+    .questionbar .head{
+        margin: 0;
+        position: relative;
+        top: 20px;
+        left: 120px;
+        padding: 10px;
+        width: fit-content;
+        border: 1px solid white;
+        background-color: white;
+        border-radius: 4px;
+    }
+    .questionbar p{
+        position: relative;
+        top: 90%;
+        left: 120px;
+        font-weight: bold;
+        color: white;
+    }
     .hidden{
         display: none;
     }
@@ -306,11 +363,21 @@
             document.querySelector('.pageinfo').classList.remove('overlay');
             document.querySelector('.pageinfo').classList.add('hidden');
         }
+
+        if(!document.querySelector('.questionbar').classList.contains('hidden') && (e.key == 'q' || e.key == 'Q')){
+            document.querySelector('.questionbar').classList.add('hidden');
+        }
     });
 
     document.querySelector('.logo').addEventListener('click', function(){
         document.querySelector('.pageinfo').classList.add('overlay');
         document.querySelector('.pageinfo').classList.remove('hidden');
     });
+
+    document.querySelector('.questiontag').addEventListener('click', function(){
+        if(document.querySelector('.questionbar').classList.contains('hidden')){
+            document.querySelector('.questionbar').classList.remove('hidden');
+        }
+    })
 </script>
 </html>
